--- a/code/style.css
+++ b/code/style.css
@@ -40,16 +40,18 @@ hr.thick {
   width: 90%;
   margin: 0 auto;
 }
-
 .site-header {
   height: 20%;
-  padding: 10% 10%;
   background: rgb(238, 174, 202);
   background: radial-gradient(
     circle,
     rgba(238, 174, 202, 1) 0%,
     rgba(148, 187, 233, 1) 100%
   );
+  margin-bottom: 2vh;
+}
+.site-header-inner {
+  padding: 10% 10%;
   margin-bottom: 1vh;
 }
 
@@ -89,6 +91,48 @@ hr.thick {
   color: rgb(85, 26, 139);
   text-transform: uppercase;
   font-size: 3.5vh;
+}
+
+.site-header-nav {
+  display: none;
+}
+
+.site-header-mobile-nav-menu {
+  width: 100%;
+  height: 0;
+  background: rgb(230, 220, 220);
+  transition: all 0.4s linear;
+}
+
+.site-header-mobile-nav-menu i {
+  font-size: 1%;
+  padding-left: 1vw;
+  padding-bottom: 1vh;
+}
+
+.site-header-mobile-nav-menu ul {
+  display: none;
+  list-style: none;
+}
+
+.site-header-mobile-nav-menu li {
+  display: flex;
+}
+
+.site-header-mobile-nav-menu a {
+  text-decoration: none;
+  font-family: "Bebas Neue", cursive;
+  font-size: 3vh;
+  text-align: center;
+  padding: 1% 0;
+}
+
+input:checked ~ .site-header-mobile-nav-menu {
+  height: 220px;
+}
+
+input:checked ~ .site-header-mobile-nav-menu ul {
+  display: block;
 }
 
 .section-news {
@@ -203,6 +247,10 @@ footer {
 
 /* larger mobile view */
 @media (min-width: 576px) {
+  .site-header-nav {
+    display: none;
+  }
+
   .mobile-news-image {
     height: auto;
     min-height: 31vh;
@@ -219,6 +267,11 @@ footer {
     display: flex;
     flex-wrap: wrap;
   }
+
+  .site-header-nav {
+    display: none;
+  }
+
   .site-news {
     width: 46%;
   }
@@ -248,7 +301,7 @@ footer {
     width: 100%;
   }
 
-  .site-header {
+  .site-header-inner {
     padding: 4% 19%;
   }
 
@@ -261,6 +314,14 @@ footer {
 
   .site-big-news-figure {
     min-height: 36vh;
+  }
+
+  .site-header-nav {
+    display: block;
+  }
+
+  .site-header-mobile-nav {
+    display: none;
   }
 
   .site-news-body {
@@ -302,4 +363,32 @@ footer {
   figure {
     min-height: 27vh;
   }
+}
+
+.site-header-nav {
+  width: 100% !important;
+}
+
+.site-header-nav ul {
+  display: flex;
+}
+
+.site-header-nav li {
+  display: flex;
+  border: 1px solid red;
+}
+
+.site-header-nav li > * {
+  flex-basis: 100%;
+}
+
+.site-header-nav a {
+  font-family: "Bebas Neue", cursive;
+  font-size: 3vh;
+  text-align: center;
+  color: rgb(85, 26, 139);
+}
+
+.site-header-nav a:hover {
+  color: rgb(250, 91, 178);
 }
