--- a/code/style.css
+++ b/code/style.css
@@ -162,6 +162,7 @@ h1, h2{
   align-items: center;
   justify-content: center;
   text-align: center;
+
 }
 
 .little-pic{
@@ -169,6 +170,10 @@ h1, h2{
   width: 250px;
   border-radius: 1rem;
   box-shadow: 5px 10px;
+}
+
+.sub-text {
+  margin-top: 0;
 }
 
 /* footer */
