--- a/style.css
+++ b/style.css
@@ -19,27 +19,30 @@ body {
   align-items: center;
   padding: 1rem;
 }
-/* .hero {
+
+.hero {
 height: 100%;
 width:  100%;
 background-size: 600%;
-background: linear-gradient(45deg, orange, #e94584, #24aadb);
+background: linear-gradient(45deg, rgb(0, 255, 200), #24aabc, #245edb);
 animation-name: wave;
 animation-duration: 20s;
 animation-iteration-count: infinite;
-animation-direction: alternate;
-} */
+animation-direction: alternate; 
+box-shadow: 0px 2px 8px -1px grey;
+} 
 
-/* @keyframes wave {
+ @keyframes wave {
   0% {background-position: 0%;}
   100% {background-position: 100%;}
-} */
+}
 
 .logo {
   max-width: 10%;
-  min-width: 5%;
-  border-radius: 100%%;
-  box-shadow: 0px 2px 4px -1px grey;
+  min-width: 10%;
+  margin: 1rem;
+  border-radius: 20%;
+  box-shadow: 0px 2px 8px 1px grey;
 }
 
 h1 {
@@ -61,7 +64,7 @@ h3, h4 {
 }
 
 .link:hover {
-  color: grey;
+  color: whitesmoke;
   text-decoration: none;
 }
 
@@ -71,7 +74,11 @@ h3, h4 {
   grid-template-columns: repeat(8, 1fr);
   gap: 1rem;
   padding: 0.5rem;
-  margin: 1rem;
+  margin: 2rem;
+  
+  /* white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis; */
 }
 
 .big-news:hover {
@@ -80,6 +87,11 @@ h3, h4 {
 
 .big1, .big2 {
   grid-column: span 8;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 4; /* should decide number of lines to show but does not affect*/
+  -webkit-box-orient: vertical;
 }
 
 /* styling small/other news cards*/
@@ -96,6 +108,11 @@ h3, h4 {
   display: flex;
   text-align: center;
   padding: 1rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 4; /* number of lines to show */
+  -webkit-box-orient: vertical;
 }
 
 .other1:hover, .other2:hover, .other3:hover, .other4:hover, .other5:hover, .other6:hover, .other7:hover {
@@ -117,11 +134,10 @@ footer {
   letter-spacing: 0.2rem;
   text-transform: uppercase;
   padding: 0.5rem;
-  background-color: rgba(245, 245, 245, 0.466);
-  border-top: lightslategray;
+  background: linear-gradient(45deg, rgb(0, 255, 200), #24aabc, #245edb);
   text-align: center;
-  margin-top: auto;
-  display: block;
+  margin-top: 4rem;
+  box-shadow: 0px 2px 8px -1px grey;
 }
 
 footer p a {
