--- a/code/style.css
+++ b/code/style.css
@@ -1,12 +1,14 @@
 
-      body{
+     html{
+      font-family: 'Quicksand', sans-serif;
+     }
+     
+     body{
         
-        max-width: 1700px;
-        
-        
+        max-width: 1920px;
       }
       
-     
+     /* this is my header*/
       .header-cool{
         display: flex;
         justify-content: space-between;
@@ -14,8 +16,21 @@
         background-color: khaki;
         padding-left: 20px;
         padding-right: 20px;
+        width: calc(100% - 3em);
       }
-
+ /* this is my animation for the header text and you can find it here: https://lenadesign.org/2021/03/05/pure-css-rainbow-text-animation/*/
+      .header-title{
+        font-size: 40px;
+        background-image:linear-gradient(to right, red, orange, yellow, green, blue, indigo,violet);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        animation: move 700s linear infinite;
+      }
+@keyframes move {
+  to{
+    background-position: 4500vh;
+  }
+}
       .navigation-link {
         padding: 5px;
       }
@@ -25,6 +40,7 @@
         height: 50px;
       }
 
+      /* here i display none on the title when the webpage is under 768px*/
       .header-title{
         display: none;
       }
@@ -34,46 +50,51 @@
         flex-direction: column;
         align-items: center;
         padding: 10%;
+        width: calc(90% - 3em);
       }
 
+      /* here is the hoover effect for the big news image*/
       .big-news-image{
-      display: flex;
-      height: 450px;
-      width: 450px;
-      filter: grayscale(1);
-      transition: 0.5s ease-in-out;
+         display: flex;
+         height: 450px;
+         width: 450px;
+         filter: grayscale(1);
+          transition: 0.5s ease-in-out;
       }
 
       .big-news-image:hover{
           transform: scale(1.2, 1.2);
-  filter: grayscale(0);
-  transition: 0.5s ease-in-out;
+          filter: grayscale(0);
+          transition: 0.5s ease-in-out;
       }
 
       section.smaller-news {
         display:flex;
         gap:20px;
         justify-content: center;
-        padding: 0px;
         padding-bottom: 40px;
-        flex-wrap: wrap;
+        flex-wrap: wrap; 
       }
 
+      /*I made a gradient color and a shadow on the fact boxes*/
       .smaller-news-bubble{
-    margin: 5px;
-    border: 1px solid #ccc;
-    padding: 40px;
-    background: linear-gradient(to right, rgb(179, 170, 170), rgb(133, 120, 133));
+        margin: 5px;
+        border: 1px solid #ccc;
+        padding: 40px;
+        background: linear-gradient(to right, rgb(179, 170, 170), rgb(133, 120, 133));
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        display: grid;
       }
 
       .smaller-news-image{
-  height: 400px;
-  width: 350px;
+        height: 400px;
+        width: 350px;
       }
 
-     
       /*here is where the @media-tags start to style tablet and desktop*/
       @media (min-width:768px) {
+    
+        
         .logo{
         width: 100px;
         height: 75px;
@@ -82,62 +103,55 @@
       .header-title{
         display: block;
       }
-
-      section.big-news{
-        flex-direction: inherit;
-      }
       
       .big-news-paragraph{
         padding: 20px;
       }
 
       .big-news-image{
-
         height: 550px;
-      width: 550px;
+        width: 550px;
       }
       
       .smaller-news-bubble{
-
         height: 300px;
         width: 250px;
         } 
      
-
       .smaller-news-image{
         height: 250px;
         width: 200px;
+        padding-left: 23px;
             }
 
+        .smaller-news-text{
+          padding-left: 20px;
     }
-
-    
 
       @media (min-width:992px){
         .logo{
         width: 200px;
       }
     
-
+      section.big-news{
+        flex-direction: inherit;
+      }
       .big-news-paragraph{
         padding: 60px;
       }
       
       .smaller-news-bubble{
-
       height: 200px;
       width: 120px;
-     
       } 
       
       .smaller-news-image{
         height: 140px;
         width: 100px;
-            }
-      
+        padding-left: 8px;
+            }  
+      .smaller-news-text{
+        padding-left: 10px;
+      }  
     }
-
-    
-
-
-
+  }
