--- a/code/style.css
+++ b/code/style.css
@@ -42,6 +42,26 @@ a:visited {
   justify-content: flex-end;
 }
 
+.category-top {
+  display: flex;
+  justify-content: flex-start;
+  margin: 10px;
+  padding-bottom: 5px;
+  color: rgb(236, 54, 54);
+  text-transform: uppercase;
+  text-shadow: 0.5px 0px;
+}
+
+.category-bottom {
+  display: flex;
+  justify-content: flex-start;
+  margin: 10px;
+  padding-bottom: 5px;
+  color: rgb(236, 54, 54);
+  text-transform: uppercase;
+  text-shadow: 0.5px 0px;
+}
+
 .big-news.wrapper {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
@@ -51,7 +71,7 @@ a:visited {
 
 .big-news-img {
   max-width: auto;
-  margin: 20px;
+  /* margin: 20px; */
 }
 
 .big-news-container {
@@ -73,7 +93,7 @@ a:visited {
 }*/
 
 .big-news-text {
-  margin: 15px;
+  margin: 10px;
   /* justify-content: space-between; */
 }
 
@@ -123,8 +143,8 @@ a.inline-link {
   /* box-shadow: 5px 10px #888888; */
   /* box-shadow: 5px 10px rgb(255, 182, 231); */
   /* border-style: double; */
-  border: 3px solid peachpuff;
-  box-shadow: 2px 2px peachpuff;
+  border-top: 3px solid peachpuff;
+  /* box-shadow: 2px 2px peachpuff; */
   border-radius: 1 rem;
   padding: 2rem;
   /* background: rgb(255, 213, 231); */
@@ -178,6 +198,10 @@ a.inline-link {
     justify-content: flex-end;
   }
 
+  .category {
+    display: none;
+  }
+
   .preamble {
     font-size: 30px;
   }
@@ -185,6 +209,10 @@ a.inline-link {
   .big-news-container {
     display: flex;
     flex-direction: row;
+  }
+
+  .big-news-img {
+    margin: 20px;
   }
 
   .big-news-img-container {
