--- a/code/style.css
+++ b/code/style.css
@@ -1,8 +1,9 @@
-/*html {
-  background: #e9a920;
-  color: #fff; 
-} */
+html {
+  background: #d8d7d5;
 
+} 
+
+/* header */
 .header {
   display: flex;
   justify-content: space-between;
@@ -14,38 +15,67 @@
 
 h1 {
   display: flex;
-  vertical-align: baseline;
+  align-items: center;
 }
+nav {
+  display: none;
+}
+
+/* big news */
 .big-news {
   display: flex;
   flex-direction: column;
 }
 
-/*.big-news-image {
-  display: block;
-  max-height: 200px;
-  max-width: 200px; 
+.big-news-image {
+  min-width: 250px;
+}
 
-}*/
-
+/* small news */
 .grid-container {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
 }
 
 .grid-item {
-  border: 1px solid black; 
+  background-color: white;
+  width: 300px;
+  padding-top: 25px;
+  margin: 10px;
+  /* border: 1px solid black;  */
+  box-shadow: 10px 10px 5px darkgrey;
+  display: flex;
+  flex-direction: column;
 }
 .grid-image {
+  align-self: center;
   height: 250px;
   width: 250px;
   object-fit: cover;
 }
+
+.grid-text {
+  align-self: center;
+  width: 250px
+}
+
 @media (min-width: 768px) {
+  /* header */
   .logo {
     width: 200px;
   }
 
+  nav {
+    display: flex;
+    align-items: center;
+  }
+   nav > a {
+    text-decoration: none;
+    font-size: 25px;
+    font-weight: bold;
+    color: chartreuse;
+  }
+  /* big news */
   .big-news {
     flex-direction: row;
     justify-content: space-between;
@@ -55,11 +85,19 @@ h1 {
   .big-news-text {
     width: 300px;
   }
+
+  /* small news */
   .grid-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
   }
 }
 
-
+@media (min-width: 1200px) {
+/* small news */
+  .grid-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
 
