--- a/code/style.css
+++ b/code/style.css
@@ -6,13 +6,13 @@ body {
   margin: 0  0 96px 0;
 }
 
-
 h1 {
   font-family: Raleway;
-  font-size: 1rem;
-  font-weight: 600;
+  font-size: 1.5rem;
+  font-weight: 200;
   color: #333;
   margin-left: 10px;
+  text-transform: uppercase;
 }
 
 h2 {
@@ -37,16 +37,16 @@ p {
   line-height: 1.5rem;
   font-weight: 200;
   color: #333;
+  margin-bottom: 2rem;
 }
 
 .header {
-    display: flex;
-    padding: 1rem 0.5rem 0.5rem 1rem;
-    justify-content: space-between;
-    flex-direction: row;
-    align-items: center;
-  }
-
+  display: flex;
+  padding: 0.5rem 0.5rem 0.5rem 1rem;
+  justify-content: space-between;
+  flex-direction: row;
+  align-items: center;
+}
 
 a {
   font-size: 1rem;
@@ -63,8 +63,8 @@ a {
 .button-link {
   font-size: 1rem;
   text-align: center;
-  color: #fff;
-  background: rgb(224, 124, 9);
+  color: #333;
+  background: #dedede;
   text-decoration: none;
   border-radius: 50px;
   padding: 12px 24px;
@@ -73,24 +73,53 @@ a {
   margin-top: 1rem;
 }
 
-
 .technigo-logo {
     width: 40px;
 }
 
-
 .fox-logo {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem
+  animation fadeIn linear 3s;
+  -webkit-animation: fadeIn linear 3s;
+  -moz-animation: fadeIn linear 3s;
+  -o-animation: fadeIn linear 3s;
+  -ms-animation: fadeIn linear 3s;
 }
 
-.the-fox{
+@keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-moz-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-webkit-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-o-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-ms-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+.the-fox {
   height: 44px;
   width: auto;
-  background-color: #fff;
+  /* background-color: #fff;
   padding: 1rem;
-  border-radius: 50%;
+  border-radius: 50%; */
 }
 
 .navigation a {
@@ -98,6 +127,13 @@ a {
   margin-left: 24px;
 }
 
+.section-heading h2 {
+  margin-left: 1rem;
+  font-size: 1.5rem;
+  font-family: raleway;
+  font-weight: 200;
+  text-transform: uppercase;
+}
 
 .big-news-container {
    display: flex;
@@ -108,131 +144,163 @@ a {
   
 }
 
-
 .big-news-img {
    width: 100%;
    height: auto;
 }
 
-
 .big-news-text {
-    margin-left: 1rem;
-    margin-right: 1rem;
-    margin-bottom: 2rem;
-  }
-
+  margin-left: 1rem;
+  margin-right: 1rem;
+  margin-bottom: 2rem;
+}
 
 .word-color-change {
-    color: #bb000c
-  }
+  color: #bb000c
+}
+
+.small-news-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  margin-top: 1rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+.small-news-item {                      
+  width: 100%;
+  margin-top: 1rem;
+  background-color: #fff;
+}
 
 
-  .small-news-container {
-    display: grid;
-    grid-template-columns: 1fr;
-    margin-top: 1rem;
-    margin-left: 1rem;
-    margin-right: 1rem;
-  }
+.small-news-img {
+  width: 100%;
+}
+
+.quote {
+display: flex;
+align-items: center;
+flex-direction: column;
+margin-top: 48px;
+position: relative;
+}
 
 
-  .small-news-item {                      
-    width: 100%;
-    margin-top: 1rem;
-    background-color: #fff;
-  }
+.quote p {
+  text-transform: uppercase;
+  font-size: 2rem;
+  line-height: 1.8rem;
+  margin-left: 2rem;
+  margin-right: 2rem;
+  margin-top: 2rem;
+  text-align: center;
+}
 
-
-  .small-news-img {
-    width: 100%;
-  }
-
+.quote img {
+  width: 64px;
+}
 
 .footer {
-    position: fixed;
-    padding: 1rem;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: #f8f8f8;
+  position: fixed;
+  padding: 1rem;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #f8f8f8;
+}
+
+
+@media (max-width: 767px) {
+
+  #link-id {
+  display: none;
+  }
+
+}
+
+
+@media (min-width: 768px) and (max-width: 991px) {
+
+  body {
+    margin: 0  0 110px 0;
   }
 
 
-  @media (max-width: 767px) {
-
-    #link-id {
-      display: none;
-    }
-
+  h1 {
+  font-size: 1.5rem;
   }
 
+  h2 {
+    font-size: 4rem;
+    line-height: 4.2rem;
+    margin-top: 2rem;
+  }
 
-  @media (min-width: 768px) and (max-width: 991px) {
+  h3 {
+    font-size: 1.175rem;
+    line-height: 1.5rem;
+  }
 
-    body {
-      margin: 0  0 110px 0;
-    }
+    
+  .navigation a {
+    font-size: 1.125rem;
+    font-weight: 600;
+    margin-left: 24px;
+  }
 
-
-    h1 {
-    font-size: 1.5rem;
-    }
-
-    h2 {
-      font-size: 4rem;
-      line-height: 4.2rem;
-      margin-top: 2rem;
-
-    }
-
-    h3 {
-      font-size: 1.5rem;
-      line-height: 2rem;
-
-    }
-
-    .navigation a {
-      font-size: 1.125rem;
-      font-weight: 600;
-      margin-left: 24px;
-    }
-
-    .header {
-      align-items: center; 
-      padding: 2rem 1rem 1rem 1rem;
-      
-    }
+  .header {
+    align-items: center; 
+    padding: 2rem 1rem 1rem 1rem;
+  }
 
   .button-link {
-    padding: 20px 24px;
+    padding: 18px 24px;
     min-width: 185px;
     margin-right: 0;
     }
 
-    p {
-      font-size: 1.175rem;
-      line-height: 2rem;
+  p {
+    font-size: 1.175rem;
+    line-height: 2rem;
+  }
+
+  .big-news-container a {
+    font-size: 1.175rem;
+    font-weight: 600;
+
+  }
+
+  .small-news-container {
+    grid-template-columns:  1fr 1fr;
+    flex-wrap: wrap;
+    gap: 0 1rem;
+  }
+
+  .quote {
+    margin-top: 72px;
+    margin-left: 10%;
+    margin-right: 10%;
     }
 
-    .small-news-container {
-        grid-template-columns:  1fr 1fr;
-        flex-wrap: wrap;
-        gap: 0 1rem;
-    }
+  .quote p {
+    font-size: 3rem;
+    line-height: 3.2rem;
+  }
 
-    .the-fox{
-      height: 48px;
-      width: auto;
-    }
+  .the-fox{
+    height: 48px;
+    width: auto;
+  }
 
 
-    .technigo-logo {
-      width: 64px;
-    }
+  .technigo-logo {
+    width: 64px;
+  }
 
-    .footer {
-      padding: 1rem 2rem 1rem 2rem;
-    }
+  .footer {
+    padding: 1rem 2rem 1rem 2rem;
+  }
 
 }
 
@@ -249,83 +317,117 @@ a {
   }
 
 
-   .technigo-logo {
-     width: 64px;  
-    }
-
-    .button-link {
-      padding: 20px 24px;
-      min-width: 185px;
-      margin-right: 0; 
-    }
-
-    .button-link:hover {
-       color: #f8f8f8;
-       background-color: rgb(187, 111, 25);   
-    }
-
-    h1 {
-        font-size: 1.125rem;
-        font-weight: 600; 
-    }
-
-    h2 {
-      font-size: 3rem;
-      line-height: 3.2rem;
-    }
-
-    h3:hover {
-      color: rgb(201, 115, 16);
-    }
-    
-    a:hover {
-        color: rgb(201, 115, 16);
-    }
-    
-    .navigation a {
-        font-size: 1.125rem;
-        font-weight: 600;
-        margin-left: 24px;
-    }
-
-    .big-news-container {
-        justify-content: space-between;
-        flex-direction: row;
-        margin-top: 3rem;
-        margin-left: 10%;
-        margin-right: 10%;
-    }
-
-    .big-news-text {
-        margin-right: 3rem;
-        margin-left: 3rem;
-      
-    }
-
-    .big-news-img {
-        width: 50%
-        /* object-fit: cover; */
-    }
-
-    .small-news-container {
-        grid-template-columns:  1fr 1fr 1fr 1fr;
-        gap: 32px;
-        margin-top: 48px;
-        margin-left: 10%;
-        margin-right: 10%;
-    }
-
-    .small-news-item {                      
-      margin-top: 0;
-    }
-
-    .small-news-item:hover {
-        box-shadow: 0.1rem 0.1rem #cccc;
-    }
- 
-    .footer {
-        padding: 1rem 2rem 1rem 2rem;
-      
-    }
-
+  .technigo-logo {
+    width: 64px;  
   }
+
+  .button-link {
+    padding: 18px 24px;
+    min-width: 185px;
+    margin-right: 0; 
+    transition-property: box-shadow;
+    transition-duration: 0.5s;
+  }
+
+  .button-link:hover {
+    color: #333;
+    box-shadow: 0.3rem 0.3rem #333;
+  }
+
+  h1 {
+    font-size: 2rem;
+  }
+
+  h2 {
+    font-size: 3rem;
+    line-height: 3.2rem;
+  }
+
+  .navigation a {
+    font-size: 1.125rem;
+    font-weight: 600;
+    margin-left: 16px;
+    padding: 1rem 1rem 1rem 1rem;
+    transition-property: box-shadow;
+    transition-duration: 0.5s;
+  }
+
+  .navigation a:hover {
+    background-color: #fff;
+    box-shadow: 0.4rem 0.4rem #333;
+  }
+
+  .button-link a:hover {
+    background-color: #fff;
+    box-shadow: 0.4rem 0.4rem #333;
+  }
+
+  .section-heading h2 {
+    margin-left: 10%;    
+  }
+
+  .big-news-container {
+    justify-content: space-between;
+    flex-direction: row;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-bottom: 64px;
+  }
+
+  .big-news-text {
+    margin-right: 3rem;
+    margin-left: 3rem;
+  }
+
+  .big-news-container a {
+    font-size: 1.125rem;
+    font-weight: 600;
+    margin-left: -1rem;
+    padding: 1rem 1rem 1rem 1rem;
+    transition-property: box-shadow;
+    transition-duration: 0.5s;
+  }
+
+  .big-news-container a:hover {
+    background-color: #fff;
+    box-shadow: 0.4rem 0.4rem #333;
+  }
+
+  .big-news-img {
+    width: 50%
+  }
+
+  .small-news-container {
+    grid-template-columns:  1fr 1fr 1fr 1fr;
+    gap: 32px;
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+
+
+  .small-news-item {                      
+    margin-top: 0;
+    position: relative;
+    transition-property: box-shadow;
+    transition-duration: 0.4s;
+  }
+
+  .small-news-item:hover {
+    box-shadow: 0.6rem 0.6rem #333;
+  }
+
+  .quote {
+    margin-top: 80px;
+  }
+
+  .quote p {
+    font-size: 3.2rem;
+    line-height: 3.4rem;
+    max-width: 500px;
+  }
+
+  .footer {
+    padding: 1rem 2rem 1rem 2rem;  
+  }
+
+}
