--- a/style.css
+++ b/style.css
@@ -75,10 +75,6 @@ h3, h4 {
   gap: 1rem;
   padding: 0.5rem;
   margin: 2rem;
-  
-  /* white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis; */
 }
 
 .big-news:hover {
@@ -87,10 +83,13 @@ h3, h4 {
 
 .big1, .big2 {
   grid-column: span 8;
+  display: flex;
+  text-align: center;
+  margin: auto;
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
-  -webkit-line-clamp: 4; /* should decide number of lines to show but does not affect*/
+  -webkit-line-clamp: 5;
   -webkit-box-orient: vertical;
 }
 
@@ -107,11 +106,11 @@ h3, h4 {
   grid-column: span 8;
   display: flex;
   text-align: center;
-  padding: 1rem;
+  margin: 2rem;
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
-  -webkit-line-clamp: 4; /* number of lines to show */
+  -webkit-line-clamp: 5;
   -webkit-box-orient: vertical;
 }
 
@@ -158,6 +157,7 @@ footer p a:visited {
 @media (min-width:668px) and (max-width:1024px){
   .big1, .big2 {
     grid-column: span 4;
+    text-align: left;
   }
 
   .other1, .other2, .other3, .other4, .other5, .other6, .other7  {
@@ -184,6 +184,8 @@ footer p a:visited {
 @media (min-width:1025px) {
   .big1, .big2 {
     grid-column: span 4;
+    text-align: left;
+    -webkit-line-clamp: 6;
   }
 
   .other1, .other2, .other3, .other4, .other5, .other6, .other7  {
