alignment of footer elements on mobile

--- a/code/resources/css/style.css
+++ b/code/resources/css/style.css
@@ -299,6 +299,10 @@ h3 {
     margin-top: 3%;
   }
 
+  .featured-title {
+    margin-bottom: 10px;
+  }
+
   .nav-bar {
     display: none;
   }
@@ -317,7 +321,7 @@ h3 {
   } 
 
    .footer-list {
-    text-align: start;
+    text-align: center;
   }
  
   .footer-container {
