Cleaned up code in desktop styling

--- a/code/style.css
+++ b/code/style.css
@@ -2,21 +2,15 @@
 html {
   background: whitesmoke;
 }
-/* * {border:1px solid greenyellow}  */
 
-/* Fixed positioned header with the z-index property specifies the overlay order of positioned elements. */
 header {
   background-color: whitesmoke;
   width: 100%;
-  height: 110px;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  object-fit:contain;
-  position: fixed;
-  z-index: 99;
-  top: 0;
 }
+
 nav {
   display: flex;
   width: 100%;
@@ -42,7 +36,6 @@ a {
   color: #010D00;
   font-family: 'Roboto', sans-serif;
   display: flex;
-  
 }
 
 /* Making the logo round w/ border-radius */
@@ -54,7 +47,6 @@ a {
 }
 
 .big-news {
-margin-top: 110px;
 display: flex;
 flex-wrap: wrap;
 flex-direction: column;
@@ -79,7 +71,6 @@ justify-content: center;
 .news-card {
 background-color: #D9AE79;
 display: flex;
-/* flex-direction: column;   */
 flex-wrap: wrap; 
 justify-content: space-around;
 padding-top: 5%;
@@ -91,7 +82,6 @@ margin-bottom: 5%;
 width: 90%;
 object-fit: cover;
 height: 80%;
-/* padding: 5% 10% 0% 10%; */
 border-radius: 5%;
 justify-content: center;
 filter: grayscale(100%);
@@ -114,11 +104,25 @@ flex-direction: column;
 align-items: center;
 } 
 
-/* Adding styling for tablet */
+footer {
+  display: flex;
+  padding: 10%;
+  justify-content: center;
+}
+
+.social-media {
+  display: flex;
+  width: 60%;
+  justify-content: space-evenly;
+}
+
+.credit-link {
+  justify-content: flex-end;
+  margin-right: 5%;
+}
+
 @media (min-width: 668px) and (max-width: 1024px) {
   nav {
-    /* display:flex;
-    width: 100%; */
     align-items: center;
     justify-content: space-around;
   }
@@ -134,10 +138,6 @@ align-items: center;
   h1 {
     display: none;
   }
-/*   
-  .logo {
-    display: center;
-  } */
 
   .big-news {
     flex-direction: row;
@@ -152,16 +152,9 @@ align-items: center;
 
   .big-news-text {
     width: 50%;
-    /* justify-content: center; */
     font-size: 30px;
   }
-
-  /* .grid-news { */
-    /* align-items: center; */
-    /* flex-direction: row;
-    margin: 0; */
-    
-  
+      
   .news-card {
     width: 46%;
     justify-content: space-between; 
@@ -170,9 +163,6 @@ align-items: center;
     padding: 2%;
   }
 
-  /* .news-card-image {
-    
-  } */
   .news-card-text {
     width: 100%;
     margin: 2%;
@@ -182,14 +172,12 @@ align-items: center;
 /* Adding styling for desktop */
 @media (min-width: 1025px){
   html {
-    background: #E8CBC0;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #636FA4, #E8CBC0);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #636FA4, #E8CBC0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+    background: #E8CBC0;
+    background: -webkit-linear-gradient(to right, #636FA4, #E8CBC0);
+    background: linear-gradient(to right, #636FA4, #E8CBC0);
   }
   
   header {
-    justify-content: flex-start;
     background-color: transparent;
   }
 
@@ -208,14 +196,12 @@ align-items: center;
   h1 {
     order: 0;
     color: #ffff;
-    size: 50px;
   }
 
   .big-news {
     flex-direction: row;
     justify-content:space-around;
     background: none;
-    
   } 
 
   .big-news-image {
@@ -225,9 +211,9 @@ align-items: center;
 
   .big-news-text {
     width: 50%;
-    justify-content: center;
     font-size: 30px;
   }
+
   .grid-news {
     margin: 2%;
     
